<resources>
    <string name="btn_show_license">Show full license</string>
    <string name="label_about">About</string>
    <string name="label_open_url">1. Tap URL below and authorize in Flickr</string>
    <string name="label_push_button">2. Push this button</string>
    <string name="label_instruction">Instruction</string>
    <string name="label_upload_sets">upload sets</string>
    <string name="label_not_authorized">not authorized</string>
    <string name="label_useraccount">user account</string>
    <string name="label_doesnt_support">This function is not supported on your Android.</string>
    <string name="btn_set_new_account">Set new account</string>
    <string name="btn_auth_complete">Authentication Completed!</string>
    <string name="btn_update">Obtain from Flickr</string>
    <string name="msg_wait">Please wait...</string>
    <string name="msg_logined_as">You are logged in as {0}.</string>
    <string name="msg_auth_failure">Authentication failed</string>
    <string name="title_uploading">Uploading</string>
    <string name="title_error">Error</string>
    <string name="title_login_success">Login success</string>
    <string name="ok">OK</string>
    <string name="flickr">Flickr</string>
    <string name="app_name">Flickr plugin for twicca</string>
    <string name="auth_gen_req_token">auth_gen_req_token</string>
    <string name="auth_dialog_message">Authorize in browser</string>
    <string name="button_auth">Open Browser</string>
</resources>
