<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/auth_layout" android:orientation="vertical" android:padding="10dip"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_instruction" android:id="@+id/instruction"></TextView><LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginLeft="10dip"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/auth_me" android:text="@string/label_open_url"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:autoLink="web" android:id="@+id/auth_url" android:text="http://example.com" android:layout_marginLeft="10dip" android:layout_marginBottom="10dip"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/push_me" android:text="@string/label_push_button"></TextView><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_auth_complete" android:id="@+id/btn_complete" android:layout_marginLeft="10dip" android:layout_marginBottom="10dip"></Button>
</LinearLayout>





</LinearLayout>
