<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingTop="10dip">

    <TextView
        android:id="@+id/label_user_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_useraccount"
        android:textSize="24sp"></TextView>

    <LinearLayout
        android:id="@+id/useraccount_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dip"
                android:text="@string/label_not_authorized"
                android:textSize="20sp"></TextView>
        </LinearLayout>

        <Button
            android:id="@+id/new_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginTop="20dip"
            android:text="@string/btn_set_new_account"></Button>
    </LinearLayout>

    <TextView
        android:id="@+id/label_upload_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_upload_sets"
        android:textSize="24sp"
        android:visibility="gone"></TextView>

    <LinearLayout
        android:id="@+id/sets_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal"
        android:visibility="gone">

        <Spinner
            android:id="@+id/sets_spinner"
            android:layout_width="160dip"
            android:layout_height="wrap_content"
            android:visibility="gone"></Spinner>

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/btn_update"
            android:visibility="gone"></Button>

        <TextView
            android:id="@+id/label_doesnt_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_doesnt_support"
            android:visibility="gone"></TextView>
    </LinearLayout>

</LinearLayout>
